Revision history for Neo4j::Driver::Net::HTTP::LWP

released as part of the Neo4j-Driver distribution


0.30 / development

 - Deprecate method protocol() in LWP net module.

0.27 / 2021-08-28

 - Use config() method to read Neo4j::Driver options.
 - Rework auth handling.

0.26 / 2021-07-30

 - The experimental protocol() method is now discouraged.

0.23 / 2021-04-23

 - Work around breaking change in Neo4j 4.2.5 Jolt implementation.

0.21 / 2021-02-06

 - Add experimental support for HTTP responses in Jolt format.
 - Add experimental http_reason() and result_handlers() methods.
 - Add Neo4j::Driver::Net::HTTP::LWP, remove REST::Client dependency.

0.20 / 2021-01-10

 - Add experimental date_header() for HTTP transaction timeout.

0.19 / 2021-01-09

 - Internal redesign (removes private Transport modules).
 - Add experimental protocol() method for ServerInfo.