@@ -48,17 +48,21 @@ subtest 'static' => sub {
 
 
 subtest 'agent' => sub {
-	plan tests => 7;
-	lives_ok { $ua = 0; $ua = $m->agent() } 'agent';
-	isa_ok $ua, 'LWP::UserAgent', 'agent type';
+	plan tests => 9;
+	my $w;
+	lives_ok { $w = ''; $w = warning { my $p = $m->agent() }; } 'agent lives';
+	like $w, qr/\bagent\b.*\bdeprecated\b/i, 'agent deprecated'
+		or diag 'got warning(s): ', explain $w;
+	lives_ok { $ua = 0; $ua = $m->ua() } 'ua';
+	isa_ok $ua, 'LWP::UserAgent', 'ua type';
 	lives_and { ok $ua->default_header('X-Stream') } 'X-Stream';
 	my $mver;
 	local $Neo4j::Driver::Net::HTTP::LWP::VERSION = '0.00';
 	lives_ok { $mver = Neo4j::Driver::Net::HTTP::LWP->new($driver) } 'ver lives';
-	lives_and { like $mver->agent->agent(), qr|\bNeo4j-Driver/0\.00 libwww-perl\b| } 'ver User-Agent';
+	lives_and { like $mver->ua->agent(), qr|\bNeo4j-Driver/0\.00 libwww-perl\b| } 'ver User-Agent';
 	local $Neo4j::Driver::Net::HTTP::LWP::VERSION = undef;
 	lives_ok { $mver = Neo4j::Driver::Net::HTTP::LWP->new($driver) } 'no ver lives';
-	lives_and { like $mver->agent->agent(), qr|\bNeo4j-Driver libwww-perl\b| } 'no ver User-Agent';
+	lives_and { like $mver->ua->agent(), qr|\bNeo4j-Driver libwww-perl\b| } 'no ver User-Agent';
 };
 
 
@@ -201,8 +205,8 @@ subtest 'tls' => sub {
 			$m = Neo4j::Driver::Net::HTTP::LWP->new($driver);
 		} 'https ca_file lives';
 		lives_and { like $m->uri(), qr|^https://c|i } 'https ca_file uri';
-		lives_and { is $m->agent->ssl_opts('SSL_ca_file'), $ca_file } 'https ca_file';
-		lives_and { ok $m->agent->ssl_opts('verify_hostname') } 'https verify_hostname';
+		lives_and { is $m->ua->ssl_opts('SSL_ca_file'), $ca_file } 'https ca_file';
+		lives_and { ok $m->ua->ssl_opts('verify_hostname') } 'https verify_hostname';
 	}
 };
 
